asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__gitui__tests__stash__stash_keeping_index.snap
---
source: src/gitui/tests/stash.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Staged changes (1)                                                             |
 added      file-one…                                                           |
                                                                                |
 Stashes                                                                        |
 stash@0 On main: test                                                          |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git stash push --keep-index --include-untracked --message test                |
Saved working directory and index state On main: test                           |
styles_hash: 47b6f234256a56ab
